Layout - Custom properties, Reset y Navigation

--- a/Moviles/medio_tiempo.html
+++ b/Moviles/medio_tiempo.html
@@ -8,6 +8,8 @@
   <title>Layout MedioTiempo.com</title>
   <link href="https://fonts.googleapis.com/css?family=Roboto:400,700" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hamburgers/0.9.3/hamburgers.min.css">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp"
+    crossorigin="anonymous">
   <link rel="stylesheet" href="./css/medio_tiempo.css">
 </head>
 
@@ -56,7 +58,33 @@
     <h2>Calendario</h2>
   </main>
   <footer class="Footer">
-    <h2>Footer</h2>
+    <section class="Footer-container">
+      <div class="Footer-nav">
+        <nav class="SocialMedia">
+          <a href="https://facebook.com" target="_blank">
+            <i class="fab fa-facebook"></i>
+          </a>
+          <a href="https://twitter.com" target="_blank">
+            <i class="fab fa-twitter"></i>
+          </a>
+          <a href="https://github.com/jonmircha/iconos36" target="_blank">
+            <i class="fab fa-github"></i>
+          </a>
+          <a href="https://youtube.com" target="_blank">
+            <i class="fab fa-youtube"></i>
+          </a>
+          <a href="https://instagram.com" target="_blank">
+            <i class="fab fa-instagram"></i>
+          </a>
+        </nav>
+      </div>
+      <div class="Footer-copy">
+        <p>
+          &copy; 2018 Copyright
+          <a href="https://jonmircha.com" target="_blank">@jonmircha</a>
+        </p>
+      </div>
+    </section>
   </footer>
   <script src="./js/medio_tiempo.js"></script>
 </body>
