Diseño de  Latest NEws

--- a/Moviles/medio_tiempo.html
+++ b/Moviles/medio_tiempo.html
@@ -50,43 +50,53 @@
     </section>
   </header>
   <article class="LatestNews  u-afterFixed">
-    <h2>LatestNews</h2>
+    <div class="LatestNews-container">
+      <a href="#" class="u-latest">
+        <img src="https://mt.brightspotcdn.com/dims4/default/6ce1bce/2147483647/thumbnail/800x450%5E/quality/90/?url=https%3A%2F%2Fmt.brightspotcdn.com%2Fdc%2F83%2Fd9c809f24b33994df0123f42aa92%2Fmex-vs-kor-top-1.jpg">
+      </a>
+      <a href="#">
+        <img src="https://mt.brightspotcdn.com/dims4/default/7f1e542/2147483647/thumbnail/400x225%5E/quality/90/?url=https%3A%2F%2Fmt.brightspotcdn.com%2F77%2F2b%2F76d4f5a54f87933c60d54f7447bf%2Ftopalemaniaconletras.jpg">
+      </a>
+      <a href="#">
+        <img src="https://mt.brightspotcdn.com/dims4/default/584322e/2147483647/thumbnail/400x225%5E/quality/90/?url=https%3A%2F%2Fmt.brightspotcdn.com%2Fec%2F2f%2F8ad09c6243709e706c0eb709e101%2Ftop-gol-ch14.jpg ">
+      </a>
+    </div>
   </article>
-  <main class="Main">
+  <main class="Main ">
     <h2>Lo Último</h2>
     <h2>Recomendado</h2>
     <h2>Calendario</h2>
   </main>
-  <footer class="Footer">
-    <section class="Footer-container">
-      <div class="Footer-nav">
-        <nav class="SocialMedia">
-          <a href="https://facebook.com" target="_blank">
-            <i class="fab fa-facebook"></i>
+  <footer class="Footer ">
+    <section class="Footer-container ">
+      <div class="Footer-nav ">
+        <nav class="SocialMedia ">
+          <a href="https://facebook.com " target="_blank ">
+            <i class="fab fa-facebook "></i>
           </a>
-          <a href="https://twitter.com" target="_blank">
-            <i class="fab fa-twitter"></i>
+          <a href="https://twitter.com " target="_blank ">
+            <i class="fab fa-twitter "></i>
           </a>
-          <a href="https://github.com/jonmircha/iconos36" target="_blank">
-            <i class="fab fa-github"></i>
+          <a href="https://github.com/jonmircha/iconos36 " target="_blank ">
+            <i class="fab fa-github "></i>
           </a>
-          <a href="https://youtube.com" target="_blank">
-            <i class="fab fa-youtube"></i>
+          <a href="https://youtube.com " target="_blank ">
+            <i class="fab fa-youtube "></i>
           </a>
-          <a href="https://instagram.com" target="_blank">
-            <i class="fab fa-instagram"></i>
+          <a href="https://instagram.com " target="_blank ">
+            <i class="fab fa-instagram "></i>
           </a>
         </nav>
       </div>
-      <div class="Footer-copy">
+      <div class="Footer-copy ">
         <p>
           &copy; 2018 Copyright
-          <a href="https://jonmircha.com" target="_blank">@jonmircha</a>
+          <a href="https://jonmircha.com " target="_blank ">@jonmircha</a>
         </p>
       </div>
     </section>
   </footer>
-  <script src="./js/medio_tiempo.js"></script>
+  <script src="./js/medio_tiempo.js "></script>
 </body>
 
 </html>
