Diseño de  3 columnas y tarjetas

--- a/Moviles/medio_tiempo.html
+++ b/Moviles/medio_tiempo.html
@@ -62,10 +62,104 @@
       </a>
     </div>
   </article>
-  <main class="Main ">
-    <h2>Lo Último</h2>
-    <h2>Recomendado</h2>
-    <h2>Calendario</h2>
+  <main class="Main">
+    <div class="Main-container">
+      <section class="TheLast">
+        <h2 class="Main-title">Lo Último</h2>
+        <article class="Card-main">
+          <a href="#">
+            <h5>Selección Mexicana</h5>
+            <img src="https://mt.brightspotcdn.com/dims4/default/d117e1f/2147483647/resize/390x%3E/quality/90/?url=https%3A%2F%2Fmt.brightspotcdn.com%2F44%2F96%2F6ad4813f4a24853ef011fa00004f%2Ftri.jpg">
+            <h3>México no hace cálculos sobre posiciones o resultados para evitar a Brasil</h3>
+          </a>
+        </article>
+        <article class="Card-second">
+          <a href="#">
+            <div>
+              <h5>Selección Mexicana</h5>
+            </div>
+            <img src="https://mt.brightspotcdn.com/dims4/default/9c650fc/2147483647/resize/390x%3E/quality/90/?url=https%3A%2F%2Fmt.brightspotcdn.com%2F9d%2Fcc%2Fa0abf11a45f3a1625950b17b335f%2F1.jpg">
+            <h3>Ochoa disfrutó más el triunfo contra Corea por vivirlo en familia</h3>
+          </a>
+        </article>
+        <article class="Card-second">
+          <a href="#">
+            <div>
+              <h5>Selección Mexicana</h5>
+            </div>
+            <img src="https://mt.brightspotcdn.com/dims4/default/9c650fc/2147483647/resize/390x%3E/quality/90/?url=https%3A%2F%2Fmt.brightspotcdn.com%2F9d%2Fcc%2Fa0abf11a45f3a1625950b17b335f%2F1.jpg">
+            <h3>Ochoa disfrutó más el triunfo contra Corea por vivirlo en familia</h3>
+          </a>
+        </article>
+        <article class="Card-second">
+          <a href="#">
+            <div>
+              <h5>Selección Mexicana</h5>
+            </div>
+            <img src="https://mt.brightspotcdn.com/dims4/default/9c650fc/2147483647/resize/390x%3E/quality/90/?url=https%3A%2F%2Fmt.brightspotcdn.com%2F9d%2Fcc%2Fa0abf11a45f3a1625950b17b335f%2F1.jpg">
+            <h3>Ochoa disfrutó más el triunfo contra Corea por vivirlo en familia</h3>
+          </a>
+        </article>
+        <article class="Card-second">
+          <a href="#">
+            <div>
+              <h5>Selección Mexicana</h5>
+            </div>
+            <img src="https://mt.brightspotcdn.com/dims4/default/9c650fc/2147483647/resize/390x%3E/quality/90/?url=https%3A%2F%2Fmt.brightspotcdn.com%2F9d%2Fcc%2Fa0abf11a45f3a1625950b17b335f%2F1.jpg">
+            <h3>Ochoa disfrutó más el triunfo contra Corea por vivirlo en familia</h3>
+          </a>
+        </article>
+      </section>
+      <section class="Recommended">
+        <h2 class="Main-title">Recomendado</h2>
+        <article class="Card-main">
+          <a href="#">
+            <h5>Selección Mexicana</h5>
+            <img src="https://mt.brightspotcdn.com/dims4/default/9c650fc/2147483647/resize/390x%3E/quality/90/?url=https%3A%2F%2Fmt.brightspotcdn.com%2F9d%2Fcc%2Fa0abf11a45f3a1625950b17b335f%2F1.jpg">
+            <h3>Ochoa disfrutó más el triunfo contra Corea por vivirlo en familia</h3>
+          </a>
+        </article>
+        <article class="Card-second">
+          <a href="#">
+            <div>
+              <h5>Selección Mexicana</h5>
+            </div>
+            <img src="https://mt.brightspotcdn.com/dims4/default/d117e1f/2147483647/resize/390x%3E/quality/90/?url=https%3A%2F%2Fmt.brightspotcdn.com%2F44%2F96%2F6ad4813f4a24853ef011fa00004f%2Ftri.jpg">
+            <h3>México no hace cálculos sobre posiciones o resultados para evitar a Brasil</h3>
+          </a>
+        </article>
+        <article class="Card-second">
+          <a href="#">
+            <div>
+              <h5>Selección Mexicana</h5>
+            </div>
+            <img src="https://mt.brightspotcdn.com/dims4/default/d117e1f/2147483647/resize/390x%3E/quality/90/?url=https%3A%2F%2Fmt.brightspotcdn.com%2F44%2F96%2F6ad4813f4a24853ef011fa00004f%2Ftri.jpg">
+            <h3>México no hace cálculos sobre posiciones o resultados para evitar a Brasil</h3>
+          </a>
+        </article>
+        <article class="Card-second">
+          <a href="#">
+            <div>
+              <h5>Selección Mexicana</h5>
+            </div>
+            <img src="https://mt.brightspotcdn.com/dims4/default/d117e1f/2147483647/resize/390x%3E/quality/90/?url=https%3A%2F%2Fmt.brightspotcdn.com%2F44%2F96%2F6ad4813f4a24853ef011fa00004f%2Ftri.jpg">
+            <h3>México no hace cálculos sobre posiciones o resultados para evitar a Brasil</h3>
+          </a>
+        </article>
+        <article class="Card-second">
+          <a href="#">
+            <div>
+              <h5>Selección Mexicana</h5>
+            </div>
+            <img src="https://mt.brightspotcdn.com/dims4/default/d117e1f/2147483647/resize/390x%3E/quality/90/?url=https%3A%2F%2Fmt.brightspotcdn.com%2F44%2F96%2F6ad4813f4a24853ef011fa00004f%2Ftri.jpg">
+            <h3>México no hace cálculos sobre posiciones o resultados para evitar a Brasil</h3>
+          </a>
+        </article>
+      </section>
+      <section class="Calendar">
+        <h2 class="Main-title">Calendario</h2>
+      </section>
+    </div>
   </main>
   <footer class="Footer ">
     <section class="Footer-container ">
