Diseño de  3 columnas y tarjetas

--- a/Moviles/medio_tiempo.html
+++ b/Moviles/medio_tiempo.html
@@ -158,6 +158,52 @@
       </section>
       <section class="Calendar">
         <h2 class="Main-title">Calendario</h2>
+        <h3 class="Match-title">Sáb 23 de Junio, 2018</h3>
+        <article class="Match">
+          <a href="#">
+            <p>5</p>
+            <figure class="Country">
+              <img src="https://static.mediotiempo.com/0x60/bs/mt/sports/production/soccer/teams/d6f90d69-9030-42e5-9629-e8ac1052d07a.png">
+              <figcaption>Bélgica</figcaption>
+            </figure>
+            <span>Resumen</span>
+            <figure class="Country">
+              <img src="https://static.mediotiempo.com/0x60/bs/mt/sports/production/soccer/teams/b50b10b5-fb0d-40b8-a100-707a44120983.png">
+              <figcaption>Túnez</figcaption>
+            </figure>
+            <p>2</p>
+          </a>
+        </article>
+        <article class="Match">
+          <a href="#">
+            <p>1</p>
+            <figure class="Country">
+              <img src="https://static.mediotiempo.com/0x60/bs/mt/sports/production/soccer/teams/bcc5dbfa-36f9-4534-bf16-50e7806c8382.png">
+              <figcaption>Corea del Sur</figcaption>
+            </figure>
+            <span>Resumen</span>
+            <figure class="Country">
+              <img src="https://static.mediotiempo.com/0x60/bs/mt/sports/production/soccer/teams/dfffd75b-df5c-413a-bf3b-e292a89fc650.png">
+              <figcaption>México</figcaption>
+            </figure>
+            <p>2</p>
+          </a>
+        </article>
+        <article class="Match">
+          <a href="#">
+            <p>5</p>
+            <figure class="Country">
+              <img src="https://static.mediotiempo.com/0x60/bs/mt/sports/production/soccer/teams/d6f90d69-9030-42e5-9629-e8ac1052d07a.png">
+              <figcaption>Bélgica</figcaption>
+            </figure>
+            <span>Resumen</span>
+            <figure class="Country">
+              <img src="https://static.mediotiempo.com/0x60/bs/mt/sports/production/soccer/teams/b50b10b5-fb0d-40b8-a100-707a44120983.png">
+              <figcaption>Túnez</figcaption>
+            </figure>
+            <p>2</p>
+          </a>
+        </article>
       </section>
     </div>
   </main>
